--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -2,7 +2,7 @@ body{
     margin: 0px;
     padding: 0px;
     background-color: #2c3254;
-    font-family: system ui;
+    font-family: sans-serif;
     overflow: hidden;
 }
 
@@ -108,4 +108,141 @@ body{
     background-color: #272c4a;
     margin-left: 10px;
 
+}
+
+.box p{
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 35px;
+    padding-left: 10px;
+    margin-top: 20px;
+    display: inline-block;
+}
+
+.box p span{
+    font-size: 20px;
+    font-weight: 400;
+    color: #818181;
+}
+
+.box-icon{
+    font-size: 40px!important;
+    float: right;
+    margin-top: 35px!important;
+    color: #818181;
+    padding-right: 10px;
+}
+
+.col-div-8{
+    width: 70%;
+    float: left;
+}
+
+.col-div-4{
+    width: 30%;
+    float: left;
+}
+
+.content-box{
+    padding: 15px;
+}
+
+.content-box p{
+    color: #f7403b;
+    font-size: 20px;
+    margin: 0;
+}
+
+.content-box p span{
+    float: right;
+    background-color: #ddd;
+    padding: 3px 10px;
+    font-size: 15px!important;
+}
+
+.box-8 .box-4{
+    width: 95%;
+    background-color: #272c4a;
+    height: 350px;
+}
+
+.nav2{
+    display: none;
+}
+
+.box-8{
+    margin-left: 10px;
+
+}
+
+table{
+    font-family: arial,sans-serif;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+td, th {
+    text-align: left;
+    color: #ddd;
+    padding: 15px;
+    border-bottom: 1px solid #818181;
+}
+
+.circle-wrap{
+    margin: 50px auto;
+    width: 150px;
+    height: 150px;
+    background: #e6e2e7;
+    border-radius: 50%;
+}
+
+.circle-wrap .circle .mask, .circle-wrap .circle .fill{
+width: 150px;
+height: 150px;
+position: absolute;
+border-radius: 50%;
+}
+
+.circle-wrap .circle .mask{
+    clip: rect(0px, 150px, 150px, 75px);
+
+}
+
+.circle-wrap .circle .mask .fill{
+    clip: rect(0px, 75px, 150px, 0px);
+    background-color: #f7403b;
+    
+}
+
+.circle-wrap .circle .mask.full,
+.circle-wrap .circle .fill{
+animation: fill ease-in-out 3s;
+transform: rotate(126deg);
+    
+}
+
+@keyframes fill{
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(126deg);
+    }
+}
+
+.circle-wrap .inside-circle{
+    z-index: 100;
+    font-size: 2rem;
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    background-color: #fff;
+    line-height: 130px;
+    text-align: center;
+    margin-top: 10px;
+    margin-left: 10px;
+    position: absolute;
+    font-weight: 700;
 }
